fix: fix the disordered dropdown style of the release notes & keep the spacing height consistent fixed #363

--- a/web/src/components/operate-modal/index.module.scss
+++ b/web/src/components/operate-modal/index.module.scss
@@ -1,6 +1,7 @@
 .customModal {
     .customModalContent {
         padding: 0 0 20px 0 !important;
+        background: var(--color-bg) !important;
     }
 
     .customModalFooter,
